--- a/src/content/docs/drivers/application.mdx
+++ b/src/content/docs/drivers/application.mdx
@@ -3,6 +3,8 @@ title: Водительское приложение
 description: Подробная инструкция по работе с водительским приложением.
 ---
 
+import Test from '../../../components/Test.astro'
+
 Guides lead a user through a specific task they want to accomplish, often with a sequence of steps.
 Writing a good guide requires thinking about what your users are trying to do.
 
@@ -11,3 +13,5 @@ Writing a good guide requires thinking about what your users are trying to do.
 ## Further reading
 
 - Read [about how-to guides](https://diataxis.fr/how-to-guides/) in the Diátaxis framework
+
+<Test />
