add videos page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Документация
-      link: /drivers/application/
+      link: /drivers/video/
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
